style: fixed endpoint body width during collapsing

--- a/src/templates/style.css
+++ b/src/templates/style.css
@@ -128,6 +128,7 @@ footer a:hover {
 }
 .endpoint-body {
 	border-top: 1px solid #ddd;
+	width: 100% !important;
 }
 .endpoint-body .nav-tabs {
 	padding: 0 1em;
